assets/splash.css
body, html {
    margin: 0;
    padding: 0;
}

body {
    background-image: url('guitarman.jpg');
    background-position: 10% 40%;
}

.top {
    background: rgba(10,130,0,0.55);
    padding: 10px 0 10px 0;
    /* padding: 10px; */
    width: 100%;
}

.logo {
    display: block;
    opacity: 0.9;
    margin: auto;
    width: 50%;
}

.box {
    font-family: 'Roboto Condensed', sans-serif;
    font-size: 44px;
    color: rgba(30,60,30,1);
    margin-left: 10%;
    margin-top: 5%;
    height: 100%;
    width: 35%;
}

.tryBtn {
    border: 0.5px solid #666;
    border-radius: 5px;
    color: #555;
    background-color: rgb(250, 70, 77);
    display: block;
    height: 60px;
    opacity: 0.6;
    padding-top: 5px;
    margin: 20px auto 0 auto;
    text-align: center;
    text-decoration: none;
    width: 110px;
}

.tryBtn:active {
    border: 0.5px solid #acb;
    color: #464;
    background: forestgreen;
}

footer {
    font-family: 'Roboto Condensed', sans-serif;
    position: absolute;
    bottom: 5px;
    left: 27px;
}

.githubTxt {
    color: white;
    text-decoration: none;
    weight: bold;
    white-space: nowrap;
}

.sep {
    display: inline-block;
    color: #efe;
    margin: 0 22px 0 22px;
}

footer a {
    color: #acb;
    text-decoration: none;
}

.githubImg {
    height: 20px;
    margin-bottom: -4px;
}

/* iPad Pro, portrait */
@media only screen and (min-device-width: 1024px) and (max-device-height: 1366px) and (-webkit-min-device-pixel-ratio: 2)  and (orientation: portrait)  {
    body {
        background-position: 40% 40%;
        background-size: 320%;
    } 
}

/* iPad Pro, landscape */
@media only screen and (min-device-width: 1366px) and (max-device-height: 1024px) and (-webkit-min-device-pixel-ratio: 2)  and (orientation: landscape) {
    body {
        background-position: 40% 40%;
        background-size: 320%;
    } 
}

@media screen and (max-width: 950px) {
    .box {
        width: 55%;
    }
}

@media screen and (max-width: 950px) {
    .box {
        width: 65%;
    }
    body {
        background-position: 20% 40%;
        background-size: 300%;
    }
}

@media screen and (max-width: 725px) {
    html {
        height: 100%;
    }
    body {
        background-position: 20% 40%;
        background-size: 300%;
        height: 100%;
        overflow: hidden;
        position: fixed;
    }
    .box {
        width: 75%;
    }
    .top {
        padding: 10px;
    }
}

@media screen and (max-width: 660px) {

    body {
        background: linear-gradient(
                            rgba(240, 240, 240, 0.4),
                            rgba(0, 0, 0, 0.4)),
        url('guitarman.jpg');
        background-position: 25% 40%;
        text-align: center;
    }
    .box {
        margin-left: 20px;
        margin-right: 20px;
        width: 100%;
    }
    .tryBtn {
        margin: 20px auto 0 auto;
    }
    footer {
        font-size: 10px;
    }
    .githubImg {
        height: 15px;
    }
}


@media screen and (max-width: 430px) {
    body {
        background-position: 50% 40%;
        background-size: 300%;
    }
}

@media screen and (max-width: 390px) {
    body {
        background-size: 350%;
    }
    .box {
        margin: 0;
        padding: 0;
        width: 100%;
    }
}

